<resources>
    <string name="app_name">AppChat</string>
    <string name="Email">Correo electronico</string>
    <string name="email">Correo electronico</string>
    <string name="password">Contraseña</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="dontHaveAccount">¿No tienes cuenta?</string>
    <string name="register_here">Registrate aquí</string>
    <string name="register">REGISTRO</string>
    <string name="confirmPassword">Confirmar contraseña</string>
    <string name="name_user">Nombre de usuario</string>
    <string name="Register">REGISTRARSE</string>
    <string name="Confirm">CONFIRMAR</string>
    <string name="complete_information">Completa tu información</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PhoneNumber">Telefono</string>
    <string name="transitionName_picture">transitionnamepicture</string>
    <string name="ViewProfile">VER PERFIL</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>