<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:elevation="4dp"
            app:shape_arc_cropDirection="outside"
            app:shape_arc_height="20dp"
            app:shape_arc_position="bottom"
            >
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary_color_button"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/complete_information"
                android:textColor="@color/white_color"
                android:textSize="25sp"
                android:textStyle="bold"
                />
        </com.github.florent37.shapeofview.shapes.ArcView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="22dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_person" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_user"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/primary_black_color" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Confirm"
        android:backgroundTint="@color/primary_color_button"
        android:layout_gravity="bottom"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white_color"
        android:layout_margin="20dp"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="top | center"
        android:layout_marginTop="140dp"
        app:civ_border_color="#eeeeee"
        app:civ_border_width="5dp"
        app:civ_circle_background_color="@color/white_color"
        android:src="@drawable/ic_persona_gray" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>