<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.EditProfileActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/black_color"/>

    <ImageView
        android:id="@+id/ImageEditCover"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:alpha="0.8"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_portada"
        android:transitionName="@string/transitionName_picture"
        app:layout_collapseMode="parallax" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/CircleImageProfile"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="130dp"
        android:src="@drawable/ic_person_menu"
        app:civ_border_color="@color/white_color"
        app:civ_border_width="4dp"
        app:civ_circle_background_color="@color/gray_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_person" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputUserNameEdit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_user"
                    android:inputType="text"
                    android:textColorHint="@color/primary_black_color" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_baseline_local_phone_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputPhoneNumberEdit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/PhoneNumber"
                    android:inputType="numberSigned"
                    android:textColorHint="@color/primary_black_color" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnUpdateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/primary_blue_color"
        android:textColor="@color/white_color"
        android:text="ACTUALIZAR"
        android:layout_gravity="bottom"
        android:layout_margin="25dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/CircleImageBackProfile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_arrow_left"
        android:layout_margin="15dp"
        app:civ_border_color="@color/white_color"
        app:civ_border_width="1dp"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>